--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "BaiThuocNamHayService",
   "main": "./bin/src/index.js",
   "scripts": {
-    "start": "yarn start:dev",
+    "start": "yarn start:prod",
     "start:prod": "yarn env:prod node ./bin/src/index.js",
+    "start:stage": "yarn env:stage node ./bin/src/index.js",
     "start:dev": "yarn build:tsoa && yarn env:dev ts-node-dev --respawn ./src",
     "build": "yarn build:tsoa && tsc && yarn copy:swagger",
     "build:routes": "tsoa routes",
@@ -14,6 +15,7 @@
     "copy:swagger": "cp -R ./build/swagger ./bin/build/swagger",
     "clean": "vnrm bin",
     "env:dev": "cross-env NODE_ENV=development",
+    "env:stage": "cross-env NODE_ENV=stage",
     "env:prod": "cross-env NODE_ENV=production",
     "lint": "tslint ./src/**/*.ts"
   },
