--- a/src/config/env/.env.development
+++ b/src/config/env/.env.development
@@ -1,7 +1,7 @@
 PORT=3000
 
-MONGO_CONNECTION_STRING="mongodb://localhost:27017/baithuocnamhaydb"
+MONGO_CONNECTION_STRING="mongodb://ds113134.mlab.com:13134/baithuocnamhaydb"
 
-USER_NAME=
+USER_NAME=admin
 
-PASSWORD=
+PASSWORD=admin1234
